minor fix for navbar spacing

--- a/app/assets/stylesheets/master.scss.css
+++ b/app/assets/stylesheets/master.scss.css
@@ -63,7 +63,7 @@ h1 {
 }
 
 .title-name {
-	width: 400px;
+	width: 300px;
 	margin-top: 5px;
 	font-size: 1.5em;
 	color: #7c1212 !important;
